added debugging info

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <span></span>
       </div>
     </div>
+    <div id="info">
+      <p id="info-global"></p>
+      <p id="info-1"></p>
+      <p id="info-2"></p>
+      <p id="info-3"></p>
+    </div>
   </body>
 
 </html>
