Added no-wrap attribute for row and removed overflow:hidden attribute.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="clock.js"></script>
   </head>
-  <body onload="tick()">
+  <body onload="tick();">
     <div id="wrapper">
       <div id="row1" class="row">
         <span></span>
